fix DeleteMapping